--- a/Financial/7/index.html
+++ b/Financial/7/index.html
@@ -1306,7 +1306,7 @@
                     </div>
                     <p>"At first, I thought a bookkeeper only records transactions. But during my consultation call with Ledgerly, they showed me how financials reveal blind spots I couldn’t see. They helped me think long-term — how today’s choices affect my business in 10 years. That one call gave me clarity on investments, how to prepare for growth, and even helped me secure investor interest. Other firms only cared about my transaction volume; Ledgerly treated me like a partner, and now I’m planning to open a new branch in Chittagong."</p>
                     <div class="client">
-                        <img src="https://via.placeholder.com/50/4CAF50/FFFFFF?text=A" alt="Anim Das">
+                        <img src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3e%3crect width='100%25' height='100%25' fill='%234CAF50'/%3e%3ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Segoe UI, sans-serif' font-size='24' fill='%23FFFFFF'%3eA%3c/text%3e%3c/svg%3e" alt="Anim Das">
                         <div>
                             <h4>Anim Das</h4>
                             <p>Fast food chain</p>
@@ -1323,7 +1323,7 @@
                     </div>
                     <p>"Before Ledgerly, I always lost track of who owed me money and which vendors I needed to pay. It was stressful and messy. Now I can see all my receivables and vendor bills in one place. It’s easier to collect payments on time, keep suppliers happy, and sleep without worrying about missing something important."</p>
                     <div class="client">
-                        <img src="https://via.placeholder.com/50/2c3e50/FFFFFF?text=T" alt="Tanzina binte Haque">
+                        <img src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3e%3crect width='100%25' height='100%25' fill='%232c3e50'/%3e%3ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Segoe UI, sans-serif' font-size='24' fill='%23FFFFFF'%3eT%3c/text%3e%3c/svg%3e" alt="Tanzina binte Haque">
                         <div>
                             <h4>Tanzina binte Haque</h4>
                             <p>Owns skin care line</p>
@@ -1340,7 +1340,7 @@
                     </div>
                     <p>"বিয়ের পর পড়াশোনা বন্ধ হয়ে গিয়েছিল, আর কখনো ভাবিনি ব্যবসা করব। পরে ছোট একটা ব্যবসা শুরু করি, কিন্তু ঠিকমতো লাভ হচ্ছিল না—প্রফিট আছে মনে হতো, কিন্তু কোথাও না কোথাও লিকেজ হচ্ছিল যা বুঝতে পারতাম না। এক বন্ধু Ledgerly-র কথা বলল, প্রথমে ভয় লাগছিল কারণ ভেবেছিলাম খুব স্মার্ট না হলে বুঝব না। কিন্তু তারা অনেক সহজ ভাষায় আমাকে বোঝাল, এমনকি ইংরেজি টার্মগুলোর বাংলা লিস্টও দিল যাতে আমি সহজে বুঝতে পারি। আমি সত্যিই অবাক হয়েছি—ওরা শুধু ব্যবসার লোক না, আমাদের মানুষ হিসেবে সম্মান দেয়। এখন আমার ব্যবসা ভালো চলছে, আর আমি নতুন ব্রাঞ্চ খোলার কথাও ভাবছি।"</p>
                     <div class="client">
-                        <img src="https://via.placeholder.com/50/FFD700/000000?text=M" alt="Maisha Tasnim">
+                        <img src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3e%3crect width='100%25' height='100%25' fill='%237f8c8d'/%3e%3ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Segoe UI, sans-serif' font-size='24' fill='%23FFFFFF'%3eM%3c/text%3e%3c/svg%3e" alt="Maisha Tasnim">
                         <div>
                             <h4>Maisha Tasnim</h4>
                             <p>Owns Crafting and Candle making</p>
