--- a/Tools/index.html
+++ b/Tools/index.html
@@ -56,6 +56,7 @@
                             <h3>Calculators & Converters</h3>
                         </div>
                         <div class="tool-list">
+                            <a href="unit-converter.html" class="tool-item"><i class="fas fa-ruler-combined"></i>Unit Converter</a>
                             <a href="age-calculator.html" class="tool-item"><i class="fas fa-birthday-cake"></i>Age Calculator</a>
                             <a href="loan-calculator.html" class="tool-item"><i class="fas fa-hand-holding-usd"></i>Loan / EMI Calculator</a>
                             <a href="percentage-calculator.html" class="tool-item"><i class="fas fa-percentage"></i>Percentage Calculator</a>
@@ -84,6 +85,7 @@
                             <h3>Media Tools</h3>
                         </div>
                         <div class="tool-list">
+                            <a href="meme-generator.html" class="tool-item"><i class="fas fa-laugh-squint"></i>Meme Generator</a>
                              <a href="qr-code-generator.html" class="tool-item"><i class="fas fa-qrcode"></i>QR Code Generator</a>
                              <a href="youtube-thumbnail.html" class="tool-item"><i class="fab fa-youtube"></i>YouTube Thumbnail Downloader</a>
                         </div>
