--- a/Tools/index.html
+++ b/Tools/index.html
@@ -56,6 +56,7 @@
                             <h3>Calculators & Converters</h3>
                         </div>
                         <div class="tool-list">
+                           <a href="compound-interest-calculator.html" class="tool-item"><i class="fas fa-chart-line"></i>Compound Interest Calculator</a>
                             <a href="unit-converter.html" class="tool-item"><i class="fas fa-ruler-combined"></i>Unit Converter</a>
                             <a href="age-calculator.html" class="tool-item"><i class="fas fa-birthday-cake"></i>Age Calculator</a>
                             <a href="loan-calculator.html" class="tool-item"><i class="fas fa-hand-holding-usd"></i>Loan / EMI Calculator</a>
@@ -111,7 +112,8 @@
                             <h3>Productivity Tools</h3>
                         </div>
                         <div class="tool-list">
-                           <a href="typing-test.html" class="tool-item"><i class="fas fa-keyboard"></i>Typing Speed Test</a>
+                           <a href="daily-planner.html" class="tool-item"><i class="fas fa-list-check"></i>Daily Planner / To-Do List</a>
+                            <a href="typing-test.html" class="tool-item"><i class="fas fa-keyboard"></i>Typing Speed Test</a>
                         </div>
                     </div>
                 </div>
