--- a/Tools/index.html
+++ b/Tools/index.html
@@ -100,7 +100,8 @@
                             <h3>Developer Tools</h3>
                         </div>
                         <div class="tool-list">
-                           <a href="json-formatter.html" class="tool-item"><i class="fas fa-sitemap"></i>JSON Validator & Formatter</a>
+                           <a href="image-to-base64.html" class="tool-item"><i class="fas fa-image"></i>Image to Base64 Converter</a>
+                            <a href="json-formatter.html" class="tool-item"><i class="fas fa-sitemap"></i>JSON Validator & Formatter</a>
                         </div>
                     </div>
                 </div>
