--- a/Tools/index.html
+++ b/Tools/index.html
@@ -105,7 +105,17 @@
                         </div>
                     </div>
                 </div>
-
+<div class="col-lg-4 col-md-6">
+    <div class="category-card">
+        <div class="category-header">
+            <i class="fas fa-calendar-alt"></i>
+            <h3>Daily Life & Information</h3>
+        </div>
+        <div class="tool-list">
+            <a href="prayer-times.html" class="tool-item"><i class="fas fa-mosque"></i>Daily Prayer Times</a>
+        </div>
+    </div>
+</div>
                 <div class="col-lg-4 col-md-6">
                     <div class="category-card">
                         <div class="category-header">
