--- a/Tools/index.html
+++ b/Tools/index.html
@@ -56,11 +56,14 @@
                             <h3>Calculators & Converters</h3>
                         </div>
                         <div class="tool-list">
-                           <a href="compound-interest-calculator.html" class="tool-item"><i class="fas fa-chart-line"></i>Compound Interest Calculator</a>
-                            <a href="unit-converter.html" class="tool-item"><i class="fas fa-ruler-combined"></i>Unit Converter</a>
                             <a href="age-calculator.html" class="tool-item"><i class="fas fa-birthday-cake"></i>Age Calculator</a>
                             <a href="loan-calculator.html" class="tool-item"><i class="fas fa-hand-holding-usd"></i>Loan / EMI Calculator</a>
                             <a href="percentage-calculator.html" class="tool-item"><i class="fas fa-percentage"></i>Percentage Calculator</a>
+                            <a href="compound-interest-calculator.html" class="tool-item"><i class="fas fa-chart-line"></i>Compound Interest Calculator</a>
+                            <a href="bmi-calculator.html" class="tool-item"><i class="fas fa-weight"></i>BMI Calculator</a>
+                            <a href="tip-calculator.html" class="tool-item"><i class="fas fa-utensils"></i>Tip Calculator</a>
+                            <a href="currency-converter.html" class="tool-item"><i class="fas fa-exchange-alt"></i>Currency Converter</a>
+                            <a href="unit-converter.html" class="tool-item"><i class="fas fa-ruler-combined"></i>Unit Converter</a>
                         </div>
                     </div>
                 </div>
@@ -78,6 +81,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="category-card">
+                        <div class="category-header">
+                            <i class="fas fa-file-alt"></i>
+                            <h3>File & PDF Management</h3>
+                        </div>
+                        <div class="tool-list">
+                            <a href="image-to-pdf.html" class="tool-item"><i class="fas fa-file-image"></i>Image to PDF Converter</a>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="col-lg-4 col-md-6">
                     <div class="category-card">
@@ -86,9 +101,11 @@
                             <h3>Media Tools</h3>
                         </div>
                         <div class="tool-list">
-                            <a href="meme-generator.html" class="tool-item"><i class="fas fa-laugh-squint"></i>Meme Generator</a>
                              <a href="qr-code-generator.html" class="tool-item"><i class="fas fa-qrcode"></i>QR Code Generator</a>
                              <a href="youtube-thumbnail.html" class="tool-item"><i class="fab fa-youtube"></i>YouTube Thumbnail Downloader</a>
+                             <a href="meme-generator.html" class="tool-item"><i class="fas fa-laugh-squint"></i>Meme Generator</a>
+                             <a href="color-palette.html" class="tool-item"><i class="fas fa-palette"></i>Color Palette Generator</a>
+                             <a href="image-resizer.html" class="tool-item"><i class="fas fa-compress-arrows-alt"></i>Image Resizer & Compressor</a>
                         </div>
                     </div>
                 </div>
@@ -100,34 +117,40 @@
                             <h3>Developer Tools</h3>
                         </div>
                         <div class="tool-list">
+                           <a href="json-formatter.html" class="tool-item"><i class="fas fa-sitemap"></i>JSON Validator & Formatter</a>
                            <a href="image-to-base64.html" class="tool-item"><i class="fas fa-image"></i>Image to Base64 Converter</a>
-                            <a href="json-formatter.html" class="tool-item"><i class="fas fa-sitemap"></i>JSON Validator & Formatter</a>
                         </div>
                     </div>
                 </div>
-<div class="col-lg-4 col-md-6">
-    <div class="category-card">
-        <div class="category-header">
-            <i class="fas fa-calendar-alt"></i>
-            <h3>Daily Life & Information</h3>
-        </div>
-        <div class="tool-list">
-            <a href="prayer-times.html" class="tool-item"><i class="fas fa-mosque"></i>Daily Prayer Times</a>
-        </div>
-    </div>
-</div>
+
                 <div class="col-lg-4 col-md-6">
                     <div class="category-card">
                         <div class="category-header">
                             <i class="fas fa-rocket"></i>
-                            <h3>Productivity Tools</h3>
+                            <h3>Education & Productivity</h3>
                         </div>
                         <div class="tool-list">
+                           <a href="typing-test.html" class="tool-item"><i class="fas fa-keyboard"></i>Typing Speed Test</a>
+                           <a href="quiz-maker.html" class="tool-item"><i class="fas fa-question-circle"></i>MCQ Quiz Maker</a>
                            <a href="daily-planner.html" class="tool-item"><i class="fas fa-list-check"></i>Daily Planner / To-Do List</a>
-                            <a href="typing-test.html" class="tool-item"><i class="fas fa-keyboard"></i>Typing Speed Test</a>
+                           <a href="timer-stopwatch.html" class="tool-item"><i class="fas fa-stopwatch"></i>Countdown Timer & Stopwatch</a>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="category-card">
+                        <div class="category-header">
+                            <i class="fas fa-calendar-alt"></i>
+                            <h3>Daily Life & Information</h3>
+                        </div>
+                        <div class="tool-list">
+                            <a href="prayer-times.html" class="tool-item"><i class="fas fa-mosque"></i>Daily Prayer Times</a>
+                            <a href="weather.html" class="tool-item"><i class="fas fa-cloud-sun"></i>Weather Dashboard</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
