--- a/Tools/index.html
+++ b/Tools/index.html
@@ -78,6 +78,7 @@
                             <a href="word-counter.html" class="tool-item"><i class="fas fa-file-word"></i>Word & Character Counter</a>
                             <a href="case-converter.html" class="tool-item"><i class="fas fa-text-height"></i>Case Converter</a>
                             <a href="password-generator.html" class="tool-item"><i class="fas fa-key"></i>Password Generator</a>
+                            <a href="dictionary.html" class="tool-item"><i class="fas fa-book-open"></i>Online Dictionary</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +119,8 @@
                         </div>
                         <div class="tool-list">
                            <a href="json-formatter.html" class="tool-item"><i class="fas fa-sitemap"></i>JSON Validator & Formatter</a>
-                           <a href="image-to-base64.html" class="tool-item"><i class="fas fa-image"></i>Image to Base64 Converter</a>
+                           <a href="meta-tag-generator.html" class="tool-item"><i class="fas fa-tags"></i>Meta Tag & Preview Generator</a>
+                           <a href="markdown-editor.html" class="tool-item"><i class="fab fa-markdown"></i>Markdown Editor</a>
                         </div>
                     </div>
                 </div>
@@ -133,6 +135,7 @@
                            <a href="typing-test.html" class="tool-item"><i class="fas fa-keyboard"></i>Typing Speed Test</a>
                            <a href="quiz-maker.html" class="tool-item"><i class="fas fa-question-circle"></i>MCQ Quiz Maker</a>
                            <a href="daily-planner.html" class="tool-item"><i class="fas fa-list-check"></i>Daily Planner / To-Do List</a>
+                           <a href="gpa-calculator.html" class="tool-item"><i class="fas fa-graduation-cap"></i>GPA / CGPA Calculator</a>
                            <a href="timer-stopwatch.html" class="tool-item"><i class="fas fa-stopwatch"></i>Countdown Timer & Stopwatch</a>
                         </div>
                     </div>
