--- a/Tools/index.html
+++ b/Tools/index.html
@@ -91,6 +91,9 @@
                         </div>
                         <div class="tool-list">
                             <a href="image-to-pdf.html" class="tool-item"><i class="fas fa-file-image"></i>Image to PDF Converter</a>
+                            <a href="pdf-splitter.html" class="tool-item"><i class="fas fa-file-export"></i>PDF Splitter</a>
+                            <a href="pdf-merger.html" class="tool-item"><i class="fas fa-object-group"></i>PDF Merger</a>
+                            <a href="pdf-to-image.html" class="tool-item"><i class="fas fa-file-image"></i>PDF to Image Converter</a>
                         </div>
                     </div>
                 </div>
@@ -107,6 +110,7 @@
                              <a href="meme-generator.html" class="tool-item"><i class="fas fa-laugh-squint"></i>Meme Generator</a>
                              <a href="color-palette.html" class="tool-item"><i class="fas fa-palette"></i>Color Palette Generator</a>
                              <a href="image-resizer.html" class="tool-item"><i class="fas fa-compress-arrows-alt"></i>Image Resizer & Compressor</a>
+                             <a href="thumbnail-maker.html" class="tool-item"><i class="fas fa-image"></i>YouTube Thumbnail Maker</a>
                         </div>
                     </div>
                 </div>
@@ -150,6 +154,7 @@
                         <div class="tool-list">
                             <a href="prayer-times.html" class="tool-item"><i class="fas fa-mosque"></i>Daily Prayer Times</a>
                             <a href="weather.html" class="tool-item"><i class="fas fa-cloud-sun"></i>Weather Dashboard</a>
+                            <a href="dhaka-emergency.html" class="tool-item"><i class="fas fa-life-ring"></i>Emergency Numbers (Dhaka)</a>
                         </div>
                     </div>
                 </div>
