--- a/mohua/index.html
+++ b/mohua/index.html
@@ -12,7 +12,7 @@
     <script src="js/main.js" defer></script>
 </head>
 <body>
-    <nav id="navbar" class="">
+    <nav id="navbar">
         <div class="nav-wrapper">
             <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
             <ul id="menu">
@@ -21,14 +21,14 @@
             </ul>
         </div>
     </nav>
+
     <main class="main">
         <div class="container">
-
-            <h1 style="text-align: center; width: 100%; margin-bottom: 20px;">Find Genuine Connections in Bangladesh</h1>
+            <h1>Find Genuine Connections in Bangladesh</h1>
 
             <div class="box">
                 <div class="box-image">
-                    <img src="images/profile-sadia.jpg" alt="Profile photo of Sadia Akhter" />
+                    <img src="images/placeholder-1.jpg" alt="Profile photo of Sadia Akhter" />
                 </div>
                 <div class="box-content">
                     <h3>Sadia Akhter</h3>
@@ -39,7 +39,7 @@
             </div>
             <div class="box">
                 <div class="box-image">
-                    <img src="images/profile-afia.jpg" alt="Profile photo of Afia Nargis" />
+                     <img src="images/placeholder-2.jpg" alt="Profile photo of Afia Nargis" />
                 </div>
                 <div class="box-content">
                     <h3>Afia Nargis</h3>
@@ -50,7 +50,7 @@
             </div>
              <div class="box">
                 <div class="box-image">
-                    <img src="images/profile-sanjida.jpg" alt="Profile photo of Sanjida Alam" />
+                     <img src="images/placeholder-3.jpg" alt="Profile photo of Sanjida Alam" />
                 </div>
                 <div class="box-content">
                     <h3>Sanjida Alam </h3>
@@ -59,22 +59,17 @@
                     <button class="gene-btn">➡️ [Start Chat]</button>
                 </div>
             </div>
-        </div>
+            </div>
     </main>
     <footer class="footer">
-        <p class="footer-text">
-            © 2025 RealMeet — Verified Connections Only.
-        </p>
+        <p class="footer-text">© 2025 RealMeet — Verified Connections Only.</p>
     </footer>
 
-    <div class="generatorA">
-        <div class="box">
-            <h2 class="title">
-                Enter your Details.
-            </h2>
+    <div class="generatorA hidden">
+        <div class="form-box">
+             <span class="close-btn">&times;</span>
+            <h2 class="title">Enter your Details</h2>
             <form id="connect-form" action="verify.html" method="GET">
-                <div class="form-group">
-                </div>
                 <div class="form-group">
                     <label for="region">Select Your Region</label>
                     <select id="region" name="region" required>
