--- a/mohua/index.html
+++ b/mohua/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <title>Meet Verified People for Global Chat & Dating | RealMeet</title>
 
-    <title>Chat with Verified Women in Bangladesh | RealMeet</title>
-
-    <meta name="description" content="Connect with real, verified women from Dhaka, Chittagong, and across Bangladesh. Start a secure, private, and real-time chat on RealMeet today." />
+    <meta name="description" content="Connect with real, verified people from around the world. Start a secure, private, and real-time chat on RealMeet today. Find your genuine connection." />
 
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/main.js" defer></script>
 </head>
 <body>
-    <nav id="navbar">
+    <nav id="navbar" class="">
         <div class="nav-wrapper">
             <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
             <ul id="menu">
@@ -21,14 +21,14 @@
             </ul>
         </div>
     </nav>
-
     <main class="main">
         <div class="container">
-            <h1>Find Genuine Connections in Bangladesh</h1>
+            
+            <h1 style="text-align: center; width: 100%; margin-bottom: 20px;">Connect With People Worldwide</h1>
 
             <div class="box">
                 <div class="box-image">
-                    <img src="images/placeholder-1.jpg" alt="Profile photo of Sadia Akhter" />
+                    <img src="images/profile-sadia.jpg" alt="Profile photo of Sadia Akhter" />
                 </div>
                 <div class="box-content">
                     <h3>Sadia Akhter</h3>
@@ -39,7 +39,7 @@
             </div>
             <div class="box">
                 <div class="box-image">
-                     <img src="images/placeholder-2.jpg" alt="Profile photo of Afia Nargis" />
+                    <img src="images/google.jpg" alt="Profile photo of Afia Nargis" />
                 </div>
                 <div class="box-content">
                     <h3>Afia Nargis</h3>
@@ -48,9 +48,9 @@
                     <button class="gene-btn">➡️ [Start Chat]</button>
                 </div>
             </div>
-             <div class="box">
+            <div class="box">
                 <div class="box-image">
-                     <img src="images/placeholder-3.jpg" alt="Profile photo of Sanjida Alam" />
+                    <img src="images/apple.png" alt="Profile photo of Sanjida Alam" />
                 </div>
                 <div class="box-content">
                     <h3>Sanjida Alam </h3>
@@ -59,25 +59,94 @@
                     <button class="gene-btn">➡️ [Start Chat]</button>
                 </div>
             </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/roblox.png" alt="Profile photo of Fariha Anjum" />
+                </div>
+                <div class="box-content">
+                    <h3>Fariha Anjum</h3>
+                    <p>💬 "New here, looking for genuine people."</p>
+                    <p>🟢 Verified today</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
             </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/xbox.jpg" alt="Profile photo of Fahmida Rumi" />
+                </div>
+                <div class="box-content">
+                    <h3>Fahmida Rumi</h3>
+                    <p>💬 "I reply fast, don’t be shy to say hi!"</p>
+                    <p>🟡 Limited availability</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/paypal.jpg" alt="Profile photo of Laboni Akter" />
+                </div>
+                <div class="box-content">
+                    <h3>Laboni Akter</h3>
+                    <p>💬 "Let’s chat and see where it goes."</p>
+                    <p>🟢 Quick access</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/netflix.png" alt="Profile photo of Rafika Jahan" />
+                </div>
+                <div class="box-content">
+                    <h3>Rafika Jahan</h3>
+                    <p>💬 "On for a bit — message me fast!"</p>
+                    <p>🟡 Available briefly</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/shein.png" alt="Profile photo of Farida Yasmin" />
+                </div>
+                <div class="box-content">
+                    <h3>Farida Yasmin</h3>
+                    <p>💬 "Open to meaningful conversations."</p>
+                    <p>🟢 Online now</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-image">
+                    <img src="images/steam.png" alt="Profile photo of Nusrat Jahan" />
+                </div>
+                <div class="box-content">
+                    <h3>Nusrat Jahan</h3>
+                    <p>💬 "Here for real connections only."</p>
+                    <p>🟡 Available briefly</p>
+                    <button class="gene-btn">➡️ [Start Chat]</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
-        <p class="footer-text">© 2025 RealMeet — Verified Connections Only.</p>
+        <p class="footer-text">
+            © 2025 RealMeet — Verified Connections Only.
+        </p>
     </footer>
 
-    <div class="generatorA hidden">
-        <div class="form-box">
-             <span class="close-btn">&times;</span>
-            <h2 class="title">Enter your Details</h2>
+    <div class="generatorA">
+        <div class="box">
+            <h2 class="title">
+                Enter your Details.
+            </h2>
             <form id="connect-form" action="verify.html" method="GET">
                 <div class="form-group">
-                    <label for="region">Select Your Region</label>
-                    <select id="region" name="region" required>
-                        <option value="">Choose Region</option>
-                        <option value="dhaka">Dhaka</option>
-                        <option value="chittagong">Chittagong</option>
-                        <option value="rajshahi">Rajshahi</option>
-                        <option value="sylhet">Sylhet</option>
+                    <label for="country">Select Your Country</label>
+                    <select id="country" name="country" required>
+                        <option value="">Choose Country</option>
+                        <option value="us">United States</option>
+                        <option value="gb">United Kingdom</option>
+                        <option value="ca">Canada</option>
+                        <option value="au">Australia</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
