--- a/mohua/index.html
+++ b/mohua/index.html
@@ -28,7 +28,7 @@
 
             <div class="box">
                 <div class="box-image">
-                    <img src="images/girl (100).jpg" alt="Profile photo of Sadia Akhter" />
+                    <img src="images/amazon.jpg" alt="Profile photo of Sadia Akhter" />
                 </div>
                 <div class="box-content">
                     <h3>Sadia Akhter</h3>
@@ -165,4 +165,5 @@
     </div>
 </body>
 </html>
+
 
