--- a/mohua/index.html
+++ b/mohua/index.html
@@ -1,169 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Meet Verified People for Global Chat & Dating | RealMeet</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>❤️ Meet Real Verified Women Ready to Chat</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/main.js" defer></script>
+  </head>
+  <body>
+    <nav id="navbar" class="">
+      <div class="nav-wrapper">
+        <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
+        <!-- Navbar Links -->
+        <ul id="menu">
+          <li><a style="color: #2196f3" href="#home">Home</a></li>
+          <li>
+            <a href="#">How It Works</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main class="main">
+      <div class="container">
+        <div class="box">
+          <div class="box-image">
+            <img src="images/আমি এতিম একটা মেয়ে.jpg" alt="Play Store Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Sadia Akhter</h3>
+  <p>💬 "Love meeting new people and making real connections."</p>
+  <p>🟢 Active 5 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Afia Nargis</h3>
+  <p>💬 "Looking to meet someone kind and honest."</p>
+  <p>🟢 Active 10 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Sanjida Alam </h3>
+  <p>💬 "Just want good vibes and real talks."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/roblox.png" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Fariha Anjum</h3>
+  <p>💬 "New here, looking for genuine people."</p>
+  <p>🟢 Verified today</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
 
-    <meta name="description" content="Connect with real, verified people from around the world. Start a secure, private, and real-time chat on RealMeet today. Find your genuine connection." />
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/xbox.jpg" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Fahmida Rumi</h3>
+  <p>💬 "I reply fast, don’t be shy to say hi!"</p>
+  <p>🟡 Limited availability</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/paypal.jpg" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Laboni Akter</h3>
+  <p>💬 "Let’s chat and see where it goes."</p>
+  <p>🟢 Quick access</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/main.js" defer></script>
-</head>
-<body>
-    <nav id="navbar" class="">
-        <div class="nav-wrapper">
-            <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
-            <ul id="menu">
-                <li><a style="color: #2196f3" href="#home">Home</a></li>
-                <li><a href="#">How It Works</a></li>
-            </ul>
-        </div>
-    </nav>
-    <main class="main">
-        <div class="container">
-            
-            <h1 style="text-align: center; width: 100%; margin-bottom: 20px;">Connect With People Worldwide</h1>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/netflix.png" alt="Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Rafika Jahan</h3>
+  <p>💬 "On for a bit — message me fast!"</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/shein.png" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Farida Yasmin</h3>
+  <p>💬 "Open to meaningful conversations."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/steam.png" alt="Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Nusrat Jahan</h3>
+  <p>💬 "Here for real connections only."</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+      </div>
+    </main>
+   <footer class="footer">
+  <p class="footer-text">
+    © 2025 RealMeet — Verified Connections Only.
+  </p>
+</footer>
 
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/amazon.jpg" alt="Profile photo of Sadia Akhter" />
-                </div>
-                <div class="box-content">
-                    <h3>Sadia Akhter</h3>
-                    <p>💬 "Love meeting new people and making real connections."</p>
-                    <p>🟢 Active 5 mins ago</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/google.jpg" alt="Profile photo of Afia Nargis" />
-                </div>
-                <div class="box-content">
-                    <h3>Afia Nargis</h3>
-                    <p>💬 "Looking to meet someone kind and honest."</p>
-                    <p>🟢 Active 10 mins ago</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/apple.png" alt="Profile photo of Sanjida Alam" />
-                </div>
-                <div class="box-content">
-                    <h3>Sanjida Alam </h3>
-                    <p>💬 "Just want good vibes and real talks."</p>
-                    <p>🟢 Online now</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/roblox.png" alt="Profile photo of Fariha Anjum" />
-                </div>
-                <div class="box-content">
-                    <h3>Fariha Anjum</h3>
-                    <p>💬 "New here, looking for genuine people."</p>
-                    <p>🟢 Verified today</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/xbox.jpg" alt="Profile photo of Fahmida Rumi" />
-                </div>
-                <div class="box-content">
-                    <h3>Fahmida Rumi</h3>
-                    <p>💬 "I reply fast, don’t be shy to say hi!"</p>
-                    <p>🟡 Limited availability</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/paypal.jpg" alt="Profile photo of Laboni Akter" />
-                </div>
-                <div class="box-content">
-                    <h3>Laboni Akter</h3>
-                    <p>💬 "Let’s chat and see where it goes."</p>
-                    <p>🟢 Quick access</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/netflix.png" alt="Profile photo of Rafika Jahan" />
-                </div>
-                <div class="box-content">
-                    <h3>Rafika Jahan</h3>
-                    <p>💬 "On for a bit — message me fast!"</p>
-                    <p>🟡 Available briefly</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/shein.png" alt="Profile photo of Farida Yasmin" />
-                </div>
-                <div class="box-content">
-                    <h3>Farida Yasmin</h3>
-                    <p>💬 "Open to meaningful conversations."</p>
-                    <p>🟢 Online now</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-image">
-                    <img src="images/steam.png" alt="Profile photo of Nusrat Jahan" />
-                </div>
-                <div class="box-content">
-                    <h3>Nusrat Jahan</h3>
-                    <p>💬 "Here for real connections only."</p>
-                    <p>🟡 Available briefly</p>
-                    <button class="gene-btn">➡️ [Start Chat]</button>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer class="footer">
-        <p class="footer-text">
-            © 2025 RealMeet — Verified Connections Only.
-        </p>
-    </footer>
+<div class="generatorA">
+  <div class="box">
+    <h2 class="title">
+      Enter your Details.
+    </h2>
+    <form id="connect-form">
+      <div class="form-group">
+       
+      </div>
+      <div class="form-group">
+        <label for="region">Select Your Region</label>
+        <select id="region" name="region" required>
+          <option value="">Choose Region</option>
+          <option value="dhaka">Dhaka</option>
+          <option value="chittagong">Chittagong</option>
+          <option value="rajshahi">Rajshahi</option>
+          <option value="sylhet">Sylhet</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="ageRange">Your Age</label>
+        <select id="ageRange" name="ageRange" required>
+          <option value="">Select Age</option>
+          <option value="18-21">18–25</option>
+          <option value="22-25">26–35</option>
+          <option value="26-30">36–45</option>
+        </select>
+      </div>
+      <a href="verify.html" type="submit" class="submit-btn">Verify Now</a>
+    </form>
+  </div>
+</div>
+  </body>
 
-    <div class="generatorA">
-        <div class="box">
-            <h2 class="title">
-                Enter your Details.
-            </h2>
-            <form id="connect-form" action="verify.html" method="GET">
-                <div class="form-group">
-                    <label for="country">Select Your Country</label>
-                    <select id="country" name="country" required>
-                        <option value="">Choose Country</option>
-                        <option value="us">United States</option>
-                        <option value="gb">United Kingdom</option>
-                        <option value="ca">Canada</option>
-                        <option value="au">Australia</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="ageRange">Your Age</label>
-                    <select id="ageRange" name="ageRange" required>
-                        <option value="">Select Age</option>
-                        <option value="18-25">18–25</option>
-                        <option value="26-35">26–35</option>
-                        <option value="36-45">36–45</option>
-                    </select>
-                </div>
-                <button type="submit" class="submit-btn">Verify Now</button>
-            </form>
-        </div>
-    </div>
-</body>
+
 </html>
-
-
