--- a/mohua/index.html
+++ b/mohua/index.html
@@ -1,172 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-
+  
+<!-- Mirrored from gift-card.eonw.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 14 Sep 2024 12:18:01 GMT -->
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>❤️ Meet Real Verified Women Ready to Chat</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/main.js" defer></script>
-  </head>
-  <body>
-    <nav id="navbar" class="">
-      <div class="nav-wrapper">
-        <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
-        <!-- Navbar Links -->
-        <ul id="menu">
-          <li><a style="color: #2196f3" href="#home">Home</a></li>
-          <li>
-            <a href="#">How It Works</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <main class="main">
-      <div class="container">
-        <div class="box">
-          <div class="box-image">
-            <img src="images/আমি এতিম একটা মেয়ে.jpg" alt="Play Store Real-Time Dating" />
-          </div>
-         <div class="box-content">
-  <h3>Sadia Akhter</h3>
-  <p>💬 "Love meeting new people and making real connections."</p>
-  <p>🟢 Active 5 mins ago</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>❤️ Meet Real Verified Women Ready to Chat</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/main.js" defer></script>
+  </head>
+  <body>
+    <nav id="navbar" class="">
+      <div class="nav-wrapper">
+        <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
+        <!-- Navbar Links -->
+        <ul id="menu">
+          <li><a style="color: #2196f3" href="#home">Home</a></li>
+          <li>
+            <a href="#">How It Works</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main class="main">
+      <div class="container">
+        <div class="box">
+          <div class="box-image">
+            <img src="images/আমি এতিম একটা মেয়ে.jpg" alt="Play Store Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Sadia Akhter</h3>
+  <p>💬 "Love meeting new people and making real connections."</p>
+  <p>🟢 Active 5 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
-          </div>
-          <div class="box-content">
-  <h3>Afia Nargis</h3>
-  <p>💬 "Looking to meet someone kind and honest."</p>
-  <p>🟢 Active 10 mins ago</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Afia Nargis</h3>
+  <p>💬 "Looking to meet someone kind and honest."</p>
+  <p>🟢 Active 10 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
-          </div>
-          <div class="box-content">
-  <h3>Sanjida Alam </h3>
-  <p>💬 "Just want good vibes and real talks."</p>
-  <p>🟢 Online now</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Sanjida Alam </h3>
+  <p>💬 "Just want good vibes and real talks."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/roblox.png" alt="Real-Time Dating" />
-          </div>
-         <div class="box-content">
-  <h3>Fariha Anjum</h3>
-  <p>💬 "New here, looking for genuine people."</p>
-  <p>🟢 Verified today</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
-</div>
-
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/xbox.jpg" alt="Real-Time Dating" />
-          </div>
-         <div class="box-content">
-  <h3>Fahmida Rumi</h3>
-  <p>💬 "I reply fast, don’t be shy to say hi!"</p>
-  <p>🟡 Limited availability</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
-</div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/paypal.jpg" alt="Real-Time Dating" />
-          </div>
-         <div class="box-content">
-  <h3>Laboni Akter</h3>
-  <p>💬 "Let’s chat and see where it goes."</p>
-  <p>🟢 Quick access</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/roblox.png" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Fariha Anjum</h3>
+  <p>💬 "New here, looking for genuine people."</p>
+  <p>🟢 Verified today</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
 
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/netflix.png" alt="Real-Time Dating" />
-          </div>
-          <div class="box-content">
-  <h3>Rafika Jahan</h3>
-  <p>💬 "On for a bit — message me fast!"</p>
-  <p>🟡 Available briefly</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/xbox.jpg" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Fahmida Rumi</h3>
+  <p>💬 "I reply fast, don’t be shy to say hi!"</p>
+  <p>🟡 Limited availability</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/shein.png" alt="Real-Time Dating" />
-          </div>
-         <div class="box-content">
-  <h3>Farida Yasmin</h3>
-  <p>💬 "Open to meaningful conversations."</p>
-  <p>🟢 Online now</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/paypal.jpg" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Laboni Akter</h3>
+  <p>💬 "Let’s chat and see where it goes."</p>
+  <p>🟢 Quick access</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-        <div class="box">
-          <div class="box-image">
-            <img src="images/steam.png" alt="Real-Time Dating" />
-          </div>
-          <div class="box-content">
-  <h3>Nusrat Jahan</h3>
-  <p>💬 "Here for real connections only."</p>
-  <p>🟡 Available briefly</p>
-  <button class="gene-btn">➡️ [Start Chat]</button>
+
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/netflix.png" alt="Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Rafika Jahan</h3>
+  <p>💬 "On for a bit — message me fast!"</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
-        </div>
-      </div>
-    </main>
-   <footer class="footer">
-  <p class="footer-text">
-    © 2025 RealMeet — Verified Connections Only.
-  </p>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/shein.png" alt="Real-Time Dating" />
+          </div>
+         <div class="box-content">
+  <h3>Farida Yasmin</h3>
+  <p>💬 "Open to meaningful conversations."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <img src="images/steam.png" alt="Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Nusrat Jahan</h3>
+  <p>💬 "Here for real connections only."</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+        </div>
+      </div>
+    </main>
+   <footer class="footer">
+  <p class="footer-text">
+    © 2025 RealMeet — Verified Connections Only.
+  </p>
 </footer>
 
 <div class="generatorA">
-  <div class="box">
-    <h2 class="title">
-      Enter your Details.
-    </h2>
-    <form id="connect-form">
-      <div class="form-group">
-       
-      </div>
-      <div class="form-group">
-        <label for="region">Select Your Region</label>
-        <select id="region" name="region" required>
-          <option value="">Choose Region</option>
-          <option value="dhaka">Dhaka</option>
-          <option value="chittagong">Chittagong</option>
-          <option value="rajshahi">Rajshahi</option>
-          <option value="sylhet">Sylhet</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="ageRange">Your Age</label>
-        <select id="ageRange" name="ageRange" required>
-          <option value="">Select Age</option>
-          <option value="18-21">18–25</option>
-          <option value="22-25">26–35</option>
-          <option value="26-30">36–45</option>
-        </select>
-      </div>
-      <a href="verify.html" type="submit" class="submit-btn">Verify Now</a>
-    </form>
-  </div>
+  <div class="box">
+    <h2 class="title">
+      Enter your Details.
+    </h2>
+    <form id="connect-form">
+      <div class="form-group">
+       
+      </div>
+      <div class="form-group">
+        <label for="region">Select Your Region</label>
+        <select id="region" name="region" required>
+          <option value="">Choose Region</option>
+          <option value="dhaka">Dhaka</option>
+          <option value="chittagong">Chittagong</option>
+          <option value="rajshahi">Rajshahi</option>
+          <option value="sylhet">Sylhet</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="ageRange">Your Age</label>
+        <select id="ageRange" name="ageRange" required>
+          <option value="">Select Age</option>
+          <option value="18-21">18–25</option>
+          <option value="22-25">26–35</option>
+          <option value="26-30">36–45</option>
+        </select>
+      </div>
+      <a href="verify.html" type="submit" class="submit-btn">Verify Now</a>
+    </form>
+  </div>
 </div>
-  </body>
+  </body>
 
-
+<!-- Mirrored from gift-card.eonw.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 14 Sep 2024 12:18:05 GMT -->
 </html>
