--- a/mohua/index.html
+++ b/mohua/index.html
@@ -12,12 +12,12 @@
   <body>
     <nav id="navbar" class="">
       <div class="nav-wrapper">
-        <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
+        <a href="https://marsgiveaway.pw/mohua/" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
         <!-- Navbar Links -->
         <ul id="menu">
-          <li><a style="color: #2196f3" href="#home">Home</a></li>
+          <li><a style="color: #2196f3" href="https://marsgiveaway.pw/mohua/">Home</a></li>
           <li>
-            <a href="#">How It Works</a>
+            <a href="https://marsgiveaway.pw/mohua/">How It Works</a>
           </li>
         </ul>
       </div>
@@ -168,3 +168,4 @@
 </div>
   </body>
 </html>
+
